buildscript {
    ext {
        springBootVersion = '2.1.+'
    }
    repositories {
        maven { url 'http://maven.aliyun.com/mvn/repository/' }
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        maven { url 'http://maven.aliyun.com/mvn/repository/' }
        mavenCentral()
    }

    sourceCompatibility = 8
    targetCompatibility = 8

    dependencies {
        runtime 'org.springframework.boot:spring-boot-devtools'

        testCompile('org.springframework.boot:spring-boot-starter-test')
        testCompile("org.junit.jupiter:junit-jupiter-api")
    }
}
